--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Victor/Desktop/eclipse/JavaPersistencia/c3p0-0.9.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Victor/Desktop/eclipse/JavaPersistencia/mchange-commons-java-0.2.16.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Victor/Desktop/eclipse/JavaPersistencia/postgresql-42.2.18.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
